--- a/.eslintrc
+++ b/.eslintrc
@@ -4,6 +4,7 @@
     "space-before-function-paren": 0,
     "semi": 0,
     "prefer-arrow-callback": 0,
-    "no-unneeded-ternary": 0
+    "no-unneeded-ternary": 0,
+    "arrow-parens": 0
   },
 }
