--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.6",
   "description": "A point in polygon based on the paper Optimal Reliable Point-in-Polygon Test and Differential Coding Boolean Operations on Polygons",
   "main": "dist/pointInPolygon.js",
-  "module": "src/main.js",
+  "module": "src/index.js",
   "unpkg": "dist/pointInPolygon.min.js",
   "jsdelivr": "dist/pointInPolygon.min.js",
   "scripts": {
