--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "point-in-polygon-hao",
-  "version": "0.0.7",
+  "version": "1.0.0",
   "description": "A point in polygon based on the paper Optimal Reliable Point-in-Polygon Test and Differential Coding Boolean Operations on Polygons",
   "main": "dist/pointInPolygon.js",
   "module": "src/index.js",
@@ -9,17 +9,17 @@
   "scripts": {
     "bench": "npm run build && node test/bench.js",
     "build": "rollup -c",
-    "test": "ava -v"
+    "test": "ava"
   },
-  "dependencies": {},
+  "dependencies": {
+  },
   "devDependencies": {
     "@turf/boolean-point-in-polygon": "^6.0.1",
-    "ava": "^1.3.1",
+    "ava": "^3.15.0",
     "benchmark": "^2.1.4",
     "eslint": "^5.15.3",
     "eslint-config-mourner": "^3.0.0",
     "esm": "^3.2.20",
-    "jsts": "^2.0.3",
     "load-json-file": "^5.2.0",
     "point-in-polygon": "^1.0.1",
     "robust-point-in-polygon": "^1.0.3",
@@ -28,11 +28,12 @@
   },
   "ava": {
     "files": [
-      "test/*spec.js"
+      "test/*.spec.js"
     ],
     "require": [
       "esm"
-    ]
+    ],
+    "verbose": true
   },
   "keywords": [
     "point-in-polygon",
